# ecom-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: eval_prompts.txt  faq.json  few_shots.jsonl  prompts.yaml  style_guide.yaml
lang/: messages.json
logs/: error.jsonl  session_20250905_230746.jsonl  session_20250905_231436.jsonl
reports/: style_eval.json
src/: app.py  config.py  order_utils.py
src/bot/: app.py  config.py  order_utils.py
tools/: style_eval.py
